refactor: migrate to FoliaLib and removed junk lavasrc